deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: app-novnc
          image: docker.io/traefik/whoami
          ports:
            - containerPort: 6080
              name: novnc
        - name: app-api
          image: docker.io/traefik/whoami
          ports:
            - containerPort: 3033
              name: api
