ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /(.*)/api
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-service
                port:
                  number: 3033
          - path: /(.*)/novnc
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-service
                port:
                  number: 6080
